<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textColor="@color/title_color"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/conversion_typeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/feetToMetersRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectConversion"
            android:text="@string/feet_label" />

        <RadioButton
            android:id="@+id/inchesToCmRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inches_label" />

        <RadioButton
            android:id="@+id/poundsToGramsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pounds_label" />
    </RadioGroup>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="goToConversion"
        android:text="@string/button_label"
        android:textAllCaps="false"
        app:backgroundTint="@color/title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversion_typeRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>